cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall")
#set(CMAKE_VERBOSE_MAKEFILE true)

add_subdirectory(./codingpuzzles-edition2)
add_subdirectory(./hackerrank)
add_subdirectory(./misc)
add_subdirectory(./c++14)
add_subdirectory(./careercup)
add_subdirectory(./geeksforgeeks)
add_subdirectory(./CrackingProgInterviews)