
# Practice - https://www.hackerrank.com/challenges/fibonacci-modified
#
set(SOURCE_FILES fibnmodified.cpp)
add_executable(fibnmodified ${SOURCE_FILES})

# https://www.hackerrank.com/contests/world-codesprint-9/challenges/grading
#
set(SOURCE_FILES grading.cpp)
add_executable(grading ${SOURCE_FILES})

# https://www.hackerrank.com/contests/world-codesprint-9/challenges/weighted-uniform-string
#
set(SOURCE_FILES weighteduniformstring.cpp)
add_executable(weighteduniformstring ${SOURCE_FILES})

# https://www.hackerrank.com/contests/world-codesprint-9/challenges/queens-attack-2
#
set(SOURCE_FILES queenattack2.cpp)
add_executable(queenattack2 ${SOURCE_FILES})

# https://www.hackerrank.com/contests/world-codesprint-9/challenges/kingdom-division
#
set(SOURCE_FILES kingdomdivision.cpp)
add_executable(kingdomdivision ${SOURCE_FILES})
