# Move semantics
#
set(SOURCE_FILES move.cpp)
add_executable(move ${SOURCE_FILES})

# unordered_map
#
set(SOURCE_FILES hashmap.cpp)
add_executable(hashmap ${SOURCE_FILES})

# constexpr
#
set(SOURCE_FILES constexpr.cpp)
add_executable(constexpr ${SOURCE_FILES})

# using
#
set(SOURCE_FILES using.cpp)
add_executable(using ${SOURCE_FILES})

# using
#
set(SOURCE_FILES inheritance.cpp)
add_executable(inheritance ${SOURCE_FILES})