
# https://www.careercup.com/question?id=5735071458787328
#
set(SOURCE_FILES boggle.cpp)
add_executable(boggle ${SOURCE_FILES})

# https://www.careercup.com/question?id=5668651919212544
#
set(SOURCE_FILES matrixspiral.cpp)
add_executable(matrixspiral ${SOURCE_FILES})

# https://www.careercup.com/question?id=5635968435486720
#
set(SOURCE_FILES largestpalindrome.cpp)
add_executable(largestpalindrome ${SOURCE_FILES})