
# https://www.careercup.com/question?id=5735071458787328
#
set(SOURCE_FILES boggle.cpp)
add_executable(boggle ${SOURCE_FILES})

# https://www.careercup.com/question?id=5668651919212544
#
set(SOURCE_FILES matrixspiral.cpp)
add_executable(matrixspiral ${SOURCE_FILES})

# https://www.careercup.com/question?id=5635968435486720
#
set(SOURCE_FILES largestpalindrome.cpp)
add_executable(largestpalindrome ${SOURCE_FILES})

# https://www.careercup.com/question?id=5752979137232896
#
set(SOURCE_FILES circularq.cpp)
add_executable(circularq ${SOURCE_FILES})

# https://www.careercup.com/question?id=6222285977419776
#
set(SOURCE_FILES matrixstart2end.cpp)
add_executable(matrixstart2end ${SOURCE_FILES})

# https://www.careercup.com/question?id=5692396030394368
#
set(SOURCE_FILES strdecode.cpp)
add_executable(strdecode ${SOURCE_FILES})

# https://www.careercup.com/question?id=5661553962516480
#
set(SOURCE_FILES stockbuysellcc.cpp)
add_executable(stockbuysellcc ${SOURCE_FILES})

# https://www.careercup.com/question?id=5177754057179136
#
set(SOURCE_FILES numtowords.cpp)
add_executable(numtowords ${SOURCE_FILES})

# https://www.careercup.com/question?id=5765433895419904
#
set(SOURCE_FILES tvuse.cpp)
add_executable(tvuse ${SOURCE_FILES})
