
# https://www.careercup.com/question?id=5735071458787328
#
set(SOURCE_FILES boggle.cpp)
add_executable(boggle ${SOURCE_FILES})

# https://www.careercup.com/question?id=5668651919212544
#
set(SOURCE_FILES matrixspiral.cpp)
add_executable(matrixspiral ${SOURCE_FILES})

# https://www.careercup.com/question?id=5635968435486720
#
set(SOURCE_FILES largestpalindrome.cpp)
add_executable(largestpalindrome ${SOURCE_FILES})

# https://www.careercup.com/question?id=5752979137232896
#
set(SOURCE_FILES circularq.cpp)
add_executable(circularq ${SOURCE_FILES})

# https://www.careercup.com/question?id=6222285977419776
#
set(SOURCE_FILES matrixstart2end.cpp)
add_executable(matrixstart2end ${SOURCE_FILES})

# https://www.careercup.com/question?id=5692396030394368
#
set(SOURCE_FILES strdecode.cpp)
add_executable(strdecode ${SOURCE_FILES})

# https://www.careercup.com/question?id=5661553962516480
#
set(SOURCE_FILES stockbuysellcc.cpp)
add_executable(stockbuysellcc ${SOURCE_FILES})

# https://www.careercup.com/question?id=5177754057179136
#
set(SOURCE_FILES numtowords.cpp)
add_executable(numtowords ${SOURCE_FILES})

# https://www.careercup.com/question?id=5765433895419904
#
set(SOURCE_FILES tvuse.cpp)
add_executable(tvuse ${SOURCE_FILES})

# https://www.careercup.com/question?id=5747323117240320
# IDentify the input points that form a square
set(SOURCE_FILES pointsofsquare.cpp)
add_executable(pointsofsquare ${SOURCE_FILES})

# https://www.careercup.com/question?id=5724734743379968
#
set(SOURCE_FILES uniquecharset.cpp)
add_executable(uniquecharset ${SOURCE_FILES})

# https://www.careercup.com/question?id=5068525614923776
#
set(SOURCE_FILES longestrepeatedchar.cpp)
add_executable(longestrepeatedchar ${SOURCE_FILES})

# https://www.careercup.com/question?id=5705773536509952
#
set(SOURCE_FILES sumofpairofarrays.cpp)
add_executable(sumofpairofarrays ${SOURCE_FILES})

# https://www.careercup.com/question?id=5091778836299776
#
set(SOURCE_FILES arraysubsetlessthantgt.cpp)
add_executable(arraysubsetlessthantgt ${SOURCE_FILES})

# https://www.careercup.com/question?id=5692984331862016
#
set(SOURCE_FILES bipartite.cpp)
add_executable(bipartite ${SOURCE_FILES})

# https://www.careercup.com/question?id=6303130607157248
#
set(SOURCE_FILES workdivision.cpp)
add_executable(workdivision ${SOURCE_FILES})

# https://www.careercup.com/question?id=5662358396469248
#
set(SOURCE_FILES factorsum.cpp)
add_executable(factorsum ${SOURCE_FILES})

# https://www.careercup.com/question?id=5651720030912512
#
set(SOURCE_FILES expressiontree.cpp)
add_executable(expressiontree ${SOURCE_FILES})

# https://www.careercup.com/question?id=5682803648757760
#
set(SOURCE_FILES movenonzero.cpp)
add_executable(movenonzero ${SOURCE_FILES})

# https://www.careercup.com/question?id=4841091208577024
#
set(SOURCE_FILES ternarytree.cpp)
add_executable(ternarytree ${SOURCE_FILES})

#
#
set(SOURCE_FILES spiralmatrix.cpp)
add_executable(spiralmatrix ${SOURCE_FILES})

#
#
set(SOURCE_FILES mirrortree.cpp)
add_executable(mirrortree ${SOURCE_FILES})


# https://www.careercup.com/question?id=5666765251018752
#
set(SOURCE_FILES alphabetperm.cpp)
add_executable(alphabetperm ${SOURCE_FILES})

# https://www.careercup.com/question?id=6319415327981568
#
set(SOURCE_FILES repeatcustomers.cpp)
add_executable(repeatcustomers ${SOURCE_FILES})
