
#
#
set(SOURCE_FILES bitcount.cpp)
add_executable(bitcount ${SOURCE_FILES})

#
#
set(SOURCE_FILES linkedlistdel.cpp)
add_executable(linkedlistdel ${SOURCE_FILES})

#
#
set(SOURCE_FILES gcd.cpp)
add_executable(gcd ${SOURCE_FILES})

#
#
set(SOURCE_FILES sortasarray.cpp)
add_executable(sortasarray ${SOURCE_FILES})

#
#
set(SOURCE_FILES linkedlistcycle.cpp)
add_executable(linkedlistcycle ${SOURCE_FILES})

#
#
set(SOURCE_FILES foo.cpp)
add_executable(foo ${SOURCE_FILES})

#
#
set(SOURCE_FILES lightbulbs.cpp)
add_executable(lightbulbs ${SOURCE_FILES})

#
#
set(SOURCE_FILES strinterleaveverify.cpp)
add_executable(strinterleaveverify ${SOURCE_FILES})
