
#
#
set(SOURCE_FILES bitcount.cpp)
add_executable(bitcount ${SOURCE_FILES})

#
#
set(SOURCE_FILES linkedlistdel.cpp)
add_executable(linkedlistdel ${SOURCE_FILES})

#
#
set(SOURCE_FILES gcd.cpp)
add_executable(gcd ${SOURCE_FILES})

#
#
set(SOURCE_FILES sortasarray.cpp)
add_executable(sortasarray ${SOURCE_FILES})

#
#
set(SOURCE_FILES linkedlistcycle.cpp)
add_executable(linkedlistcycle ${SOURCE_FILES})

#
#
set(SOURCE_FILES foo.cpp)
add_executable(foo ${SOURCE_FILES})

#
#
set(SOURCE_FILES lightbulbs.cpp)
add_executable(lightbulbs ${SOURCE_FILES})

#
#
set(SOURCE_FILES strinterleaveverify.cpp)
add_executable(strinterleaveverify ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/diffk2/
#
set(SOURCE_FILES diffk2.cpp)
add_executable(diffk2 ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/excel1/
#
set(SOURCE_FILES excel1.cpp)
add_executable(excel1 ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/pascal1/
#
set(SOURCE_FILES pascal1.cpp)
add_executable(pascal1 ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/majority/
#
set(SOURCE_FILES partition.cpp)
add_executable(partition ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/gas/
#
set(SOURCE_FILES optimumgasstn.cpp)
add_executable(optimumgasstn ${SOURCE_FILES})