
#
#
set(SOURCE_FILES bitcount.cpp)
add_executable(bitcount ${SOURCE_FILES})

#
#
set(SOURCE_FILES linkedlistdel.cpp)
add_executable(linkedlistdel ${SOURCE_FILES})

#
#
set(SOURCE_FILES gcd.cpp)
add_executable(gcd ${SOURCE_FILES})

#
#
set(SOURCE_FILES sortasarray.cpp)
add_executable(sortasarray ${SOURCE_FILES})

#
#
set(SOURCE_FILES linkedlistcycle.cpp)
add_executable(linkedlistcycle ${SOURCE_FILES})

#
#
set(SOURCE_FILES foo.cpp)
add_executable(foo ${SOURCE_FILES})

#
#
set(SOURCE_FILES lightbulbs.cpp)
add_executable(lightbulbs ${SOURCE_FILES})

#
#
set(SOURCE_FILES strinterleaveverify.cpp)
add_executable(strinterleaveverify ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/diffk2/
#
set(SOURCE_FILES diffk2.cpp)
add_executable(diffk2 ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/excel1/
#
set(SOURCE_FILES excel1.cpp)
add_executable(excel1 ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/pascal1/
#
set(SOURCE_FILES pascal1.cpp)
add_executable(pascal1 ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/majority/
#
set(SOURCE_FILES partition.cpp)
add_executable(partition ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/gas/
#
set(SOURCE_FILES optimumgasstn.cpp)
add_executable(optimumgasstn ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/arrange2/
#
set(SOURCE_FILES arrange2.cpp)
add_executable(arrange2 ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/primesum/
#
set(SOURCE_FILES primesum.cpp)
add_executable(primesum ${SOURCE_FILES})

# https://codelab.interviewbit.com/dashboard/?s_id=67517
#
set(SOURCE_FILES reach.cpp)
add_executable(reach ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/power2/
#
set(SOURCE_FILES power2.cpp)
add_executable(power2 ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/diagonal/
#
set(SOURCE_FILES antidiagonal.cpp)
add_executable(antidiagonal ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/stepnum/
#
set(SOURCE_FILES steppingnum.cpp)
add_executable(steppingnum ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/maxcoin/
#
set(SOURCE_FILES maxcoin.cpp)
add_executable(maxcoin ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/avgset/
#
set(SOURCE_FILES avgset.cpp)
add_executable(avgset ${SOURCE_FILES})

# https://codelab.interviewbit.com/problems/colorful/
#
set(SOURCE_FILES colorful.cpp)
add_executable(colorful ${SOURCE_FILES})

#
#
set(SOURCE_FILES uniqueprefix.cpp)
add_executable(uniqueprefix ${SOURCE_FILES})