# Accepts a paragraph and prints out the groups of words that are anagrams
#
set(SOURCE_FILES anagramgrp.cpp)
add_executable(anagramgrp ${SOURCE_FILES})

# Various methods of Binary tree traversal and deserialization
#
set(SOURCE_FILES binarytree.cpp)
add_executable(binarytree ${SOURCE_FILES})

# program to determine a bitonic sequence
#
set(SOURCE_FILES bitonic.cpp)
add_executable(bitonic ${SOURCE_FILES})

# find 2 numbers that sum up to number
#
set(SOURCE_FILES arraysumofpair.cpp)
add_executable(arraysumofpair ${SOURCE_FILES})

# determines the largest sum of a subsequence
set(SOURCE_FILES maxvaluesubsequence.cpp)
add_executable(maxvaluesubsequence ${SOURCE_FILES})