# Simple JSON Pretty Print
#
set(SOURCE_FILES jsonprint.cpp)
add_executable(jsonprint ${SOURCE_FILES})

# http://www.geeksforgeeks.org/stock-buy-sell/
# Determine best price to buy and sell stock in a month
#
set(SOURCE_FILES stockbuysell.cpp)
add_executable(stockbuysell ${SOURCE_FILES})

# http://www.geeksforgeeks.org/duplicates-array-using-o1-extra-space-set-2/
#
set(SOURCE_FILES dupesinarray.cpp)
add_executable(dupesinarray ${SOURCE_FILES})

