# Accepts a paragraph and prints out the groups of words that are anagrams
#
set(SOURCE_FILES friendcircles.cpp)
add_executable(friendcircles ${SOURCE_FILES})

set(SOURCE_FILES knightbishop.cpp)
add_executable(knightbishop ${SOURCE_FILES})

set(SOURCE_FILES getline.cpp)
add_executable(getline ${SOURCE_FILES})