
set(SOURCE_FILES bittwidlling.cpp)
add_executable(bittwidlling ${SOURCE_FILES})

set(SOURCE_FILES iplpredictions.cpp)
add_executable(iplpredictions ${SOURCE_FILES})

set(SOURCE_FILES binaryadd.cpp)
add_executable(binaryadd ${SOURCE_FILES})

set(SOURCE_FILES overlappingrectangles.cpp)
add_executable(overlappingrectangles ${SOURCE_FILES})