
set(SOURCE_FILES bittwidlling.cpp)
add_executable(bittwidlling ${SOURCE_FILES})

set(SOURCE_FILES iplpredictions.cpp)
add_executable(iplpredictions ${SOURCE_FILES})

set(SOURCE_FILES binaryadd.cpp)
add_executable(binaryadd ${SOURCE_FILES})

set(SOURCE_FILES overlappingrectangles.cpp)
add_executable(overlappingrectangles ${SOURCE_FILES})

set(SOURCE_FILES lrucache.cpp)
add_executable(lrucache ${SOURCE_FILES})

set(SOURCE_FILES longestprefix.cpp)
add_executable(longestprefix ${SOURCE_FILES})

set(SOURCE_FILES singlenumber.cpp)
add_executable(singlenumber ${SOURCE_FILES})

# Compression
#
set(SOURCE_FILES compression.cpp)
add_executable(compression ${SOURCE_FILES})

# Braces Check
#
set(SOURCE_FILES braces.cpp)
add_executable(braces ${SOURCE_FILES})

# Substrings that are palindromes
#
set(SOURCE_FILES substrpalindrome.cpp)
add_executable(substrpalindrome ${SOURCE_FILES})