
set(SOURCE_FILES q157-defaultargs.cpp)
add_executable(q157-defaultargs ${SOURCE_FILES})

set(SOURCE_FILES q167-initializerlist.cpp)
add_executable(q167-initializerlist ${SOURCE_FILES})

set(SOURCE_FILES q179-virtualstatic.cpp)
add_executable(q179-virtualstatic ${SOURCE_FILES})

set(SOURCE_FILES q187-funkyvirtual.cpp)
add_executable(q187-funkyvirtual ${SOURCE_FILES})