
set(SOURCE_FILES pirates-p1.cpp)
add_executable(pirates-p1 ${SOURCE_FILES})

set(SOURCE_FILES pirates-p2.cpp)
add_executable(pirates-p2 ${SOURCE_FILES})

set(SOURCE_FILES commodore-p1.cpp)
add_executable(commodore-p1 ${SOURCE_FILES})

set(SOURCE_FILES commodore-p2.cpp)
add_executable(commodore-p2 ${SOURCE_FILES})
