
# https://www.hackerrank.com/contests/101hack46/challenges/marcs-cakewalk
#
set(SOURCE_FILES cakewalk.cpp)
add_executable(cakewalk ${SOURCE_FILES})

# https://www.hackerrank.com/contests/101hack46/challenges/lena-sort
#
set(SOURCE_FILES lenasort.cpp)
add_executable(lenasort ${SOURCE_FILES})

# https://www.hackerrank.com/contests/101hack46/challenges/lena-sort
#
set(SOURCE_FILES lenasort_anta0.cpp)
add_executable(lenasort_anta0 ${SOURCE_FILES})