# https://www.hackerrank.com/contests/w28/challenges/boat-trip
#
set(SOURCE_FILES boattrip.cpp)
add_executable(boattrip ${SOURCE_FILES})

# https://www.hackerrank.com/contests/w28/challenges/the-great-xor
#
set(SOURCE_FILES xor.cpp)
add_executable(xor ${SOURCE_FILES})

# https://www.hackerrank.com/contests/w28/challenges/lucky-number-eight
#
set(SOURCE_FILES subseqmodulo.cpp)
add_executable(subseqmodulo ${SOURCE_FILES})

# https://www.hackerrank.com/contests/w28/challenges/value-of-friendship
#
set(SOURCE_FILES friendship.cpp)
add_executable(friendship ${SOURCE_FILES})

# https://www.hackerrank.com/contests/w28/challenges/value-of-friendship
#
set(SOURCE_FILES friendship2.cpp)
add_executable(friendship2 ${SOURCE_FILES})