# https://www.hackerrank.com/contests/w31/challenges/beautiful-word
#
set(SOURCE_FILES beautifulword.cpp)
add_executable(beautifulword ${SOURCE_FILES})

# https://www.hackerrank.com/contests/w31/challenges/accurate-sorting
#
set(SOURCE_FILES accuratesorting.cpp)
add_executable(accuratesorting ${SOURCE_FILES})

# https://www.hackerrank.com/contests/w31/challenges/zero-one-game
#
set(SOURCE_FILES zeroone.cpp)
add_executable(zeroone ${SOURCE_FILES})
