
# https://www.youtube.com/watch?v=NnD96abizww&list=PLrmLmBdmIlpsHaNTPP_jHHDx_os9ItYXr&index=2
#
set(SOURCE_FILES subsetsumbt.cpp)
add_executable(subsetsumbt ${SOURCE_FILES})

# https://www.youtube.com/watch?v=nYFd7VHKyWQ
#
set(SOURCE_FILES stringperm.cpp)
add_executable(stringperm ${SOURCE_FILES})

# subsets of a string
#
set(SOURCE_FILES stringsubset.cpp)
add_executable(stringsubset ${SOURCE_FILES})
