
# https://www.youtube.com/watch?v=8LusJS5-AGo
#
set(SOURCE_FILES kp01dp.cpp)
add_executable(kp01dp ${SOURCE_FILES})

# https://www.youtube.com/watch?v=149WSzQ4E1g
#
set(SOURCE_FILES kp01dptopdown.cpp)
add_executable(kp01dptopdown ${SOURCE_FILES})

# https://www.youtube.com/watch?v=cETfFsSTGJI
#
set(SOURCE_FILES minimumjumps.cpp)
add_executable(minimumjumps ${SOURCE_FILES})

# https://www.youtube.com/watch?v=Kf_M7RdHr1M
#
set(SOURCE_FILES coinchangetopdown.cpp)
add_executable(coinchangetopdown ${SOURCE_FILES})

# https://www.youtube.com/watch?v=Y0ZqKpToTic&index=5&list=PLrmLmBdmIlpsHaNTPP_jHHDx_os9ItYXr
#
set(SOURCE_FILES coinchangebottomup.cpp)
add_executable(coinchangebottomup ${SOURCE_FILES})