
# https://www.youtube.com/watch?v=8LusJS5-AGo
#
set(SOURCE_FILES kp01dp.cpp)
add_executable(kp01dp ${SOURCE_FILES})

# https://www.youtube.com/watch?v=149WSzQ4E1g
#
set(SOURCE_FILES kp01dptopdown.cpp)
add_executable(kp01dptopdown ${SOURCE_FILES})

# https://www.youtube.com/watch?v=cETfFsSTGJI
#
set(SOURCE_FILES minimumjumps.cpp)
add_executable(minimumjumps ${SOURCE_FILES})

# https://www.youtube.com/watch?v=Kf_M7RdHr1M
#
set(SOURCE_FILES coinchangetopdown.cpp)
add_executable(coinchangetopdown ${SOURCE_FILES})

# https://www.youtube.com/watch?v=Y0ZqKpToTic&index=5&list=PLrmLmBdmIlpsHaNTPP_jHHDx_os9ItYXr
#
set(SOURCE_FILES coinchangebottomup.cpp)
add_executable(coinchangebottomup ${SOURCE_FILES})

# https://www.youtube.com/watch?v=We3YDTzNXEk&index=8&list=PLrmLmBdmIlpsHaNTPP_jHHDx_os9ItYXr
#
set(SOURCE_FILES mineditdistance.cpp)
add_executable(mineditdistance ${SOURCE_FILES})

# https://www.youtube.com/watch?v=CE2b_-XfVDk&index=6&list=PLrmLmBdmIlpsHaNTPP_jHHDx_os9ItYXr
#
set(SOURCE_FILES longestincrsubseq.cpp)
add_executable(longestincrsubseq ${SOURCE_FILES})

# https://www.youtube.com/watch?v=NnD96abizww&list=PLrmLmBdmIlpsHaNTPP_jHHDx_os9ItYXr&index=2
#
set(SOURCE_FILES longestcommonsubseq.cpp)
add_executable(longestcommonsubseq ${SOURCE_FILES})

# https://www.youtube.com/watch?v=NnD96abizww&list=PLrmLmBdmIlpsHaNTPP_jHHDx_os9ItYXr&index=2
#
set(SOURCE_FILES subsetsumdp.cpp)
add_executable(subsetsumdp ${SOURCE_FILES})

# Maximum Value of an unorderd array of integers
#
set(SOURCE_FILES maxvaluesubarray.cpp)
add_executable(maxvaluesubarray ${SOURCE_FILES})
