
# KMP Substr Match - Building Prefix array
#
set(SOURCE_FILES kmpprefixbld.cpp)
add_executable(kmpprefixbld ${SOURCE_FILES})

# KMP Substr Match
#
set(SOURCE_FILES kmp.cpp)
add_executable(kmp ${SOURCE_FILES})


# https://www.youtube.com/watch?v=3ZDZ-N0EPV0&index=1&list=PLrmLmBdmIlpvm7VaC0NTR27A_3i2sU3zd
#
set(SOURCE_FILES wildcardmatch.cpp)
add_executable(wildcardmatch ${SOURCE_FILES})