
#
#
set(SOURCE_FILES levelorderprint.cpp)
add_executable(levelorderprint ${SOURCE_FILES})

#
#
set(SOURCE_FILES sametree.cpp)
add_executable(sametree ${SOURCE_FILES})

#
#
set(SOURCE_FILES root2leafsumcheck.cpp)
add_executable(root2leafsumcheck ${SOURCE_FILES})

#
#
set(SOURCE_FILES lowestcommancestor.cpp)
add_executable(lowestcommancestor ${SOURCE_FILES})
