
set(SOURCE_FILES static_assert.cpp)
add_executable(static_assert ${SOURCE_FILES})

set(SOURCE_FILES maybe.cpp)
add_executable(maybe ${SOURCE_FILES})

set(SOURCE_FILES expected.cpp)
add_executable(expected ${SOURCE_FILES})

set(SOURCE_FILES variadic_sum.cpp)
add_executable(variadic_sum ${SOURCE_FILES})

set(SOURCE_FILES variadic_multiple_inheritance_chunks.cpp)
add_executable(variadic_multiple_inheritance_chunks ${SOURCE_FILES})